<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:gravity="center_horizontal"
    android:background="@drawable/hoplog_login_background">


    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:paddingLeft="2dp"
        android:background="#ffffff"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#e0ab91"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="35dp"
            android:text="@string/don_t_have_an_account"/>

        <TextView
            android:id="@+id/text_view_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/sign_up"/>


    </LinearLayout>

</LinearLayout>

